# HySynth

./: CITATION.bib  LICENSE  README.md  requirements.txt  run_benchmarks_HSCC2021.sh  run_no_venv.jl  run_venv.jl  setup.cfg
data/real_data/: dataplot.py  preprocess.py
data/synthetic_data/: __init__.py  automata_library.py  cell_model.py  data_library.py  generator.py  json_reader.py  train_model.py  visualisation.py
data/synthetic_data/full_dsets/: single_dim.py
data/synthetic_data/multi_dim/: two_states.py
data/synthetic_data/single_dim/: four_states.py  single_state.py  three_states.py  two_states.py
examples/: example_cell_model.py  example_diabetes.py  example_real_data.py  example_synthesis_from_ha_simulations.py  example_table.py  experiment_pulse.py  experiments_CAV2019.py  experiments_HSCC2021.py
hysynth/: __init__.py  main.py
hysynth/pwl/: hysynth_pwl.py  library.py  ndim_library.py
hysynth/pwl/adaptation/: __init__.py  modecreation.py  relaxation.py
hysynth/pwl/hakimi_pwl/: __init__.py  hakimi_algorithm.py  ramer_douglas_peucker.py  unroll_hakimi.py  visibility_polygon.py
hysynth/pwl/initial_inference/: __init__.py  full_inference.py  lib.py  single_inference.py
hysynth/pwl/membership/: __init__.py  lp_mem.py  parma_mem.py
hysynth/pwl/simulation/: __init__.py  dataset_generation.py  imitation.py  simulation_core.py
hysynth/pwld/: __init__.py  adaptation_to_pwld.py  construction_from_pwld.py  hysynth_pwld.py  imitation.py  plot.py  sample_trajectory.py  synthesis.py
hysynth/utils/: Statistics.py  __init__.py  library.py
(+86 files in other folders)
