# add the files in examples/ to those that pytest should collect
[tool:pytest]
python_files = test_*.py *_test.py testing/*/*.py example_*.py
python_functions = test_* example_*

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE